syntax="proto3";

package pb;

// we need to set on proto3 extension "--proto_path=proto",
// check extesion sessing json
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_update_user.proto";
import "rpc_verify_email.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option go_package="github.com/dibrito/simple-bank/pb";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Simple Bank API";
        version: "1.2";
        contact: {
            name: "Tech School";
            url: "https://github.com/techschool";
            email: "techschool.guru@gmail.com";
        };
    };
};

service SimpleBank{
    rpc UpdateUser(UpdateUserRequest) returns(UpdateUserResponse){
        option (google.api.http) = {
            patch: "/v1/update_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this api to update user";
            summary: "Update User";
        };
    }
    rpc CreateUser(CreateUserRequest) returns(CreateUserResponse){
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this api to create a new user";
            summary: "Create New User";
        };
    }
    rpc LoginUser(LoginUserRequest) returns(LoginUserResponse){
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this api to Login a user and get access_token and refresh_token";
            summary: "Login User";
        };
    }
    rpc VerifyEmail(VerifyEmailRequest) returns(VerifyEmailResponse){
        option (google.api.http) = {
            get: "/v1/verify_email"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this api to verify user's email address";
            summary: "Verify Email";
        };
    }
}
